# vahana_mitra

./: .gitignore  README.md  kanban.db  main.py  makefile  manage.ps1  oll_template.md  prompt.md  pyproject.toml  setup.cfg
scripts/: tasks.ps1
src/app/: __init__.py  cli.py  config.py  extensions.py  logging_config.py  security.py
src/app/admin/: __init__.py  load_view.py  truck_view.py  views.py
src/app/blueprints/main/: __init__.py  routes.py
src/app/forms/: loads.py  trucks.py
src/app/instance/: dev.db
src/app/models/: __init__.py  booking.py  loads.py  trucks.py  users.py
src/app/static/: admin_style.css  style.css
src/app/templates/: base_page.html  index.html  nav_bar.html  testing.html  truck_registration_from.html
src/app/templates/admin/: custom_dashboard.html  load_schedule.html
src/app/templates/security/: login_user.html
tests/: conftest.py  test_health.py
